front-end but tasks not working fine

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,13 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+body {
+  text-align: center;
+}
+
+label, input, textarea, button  {
+  display: block;
+  margin: 10px auto;
 }
